--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -34,6 +34,11 @@
                 <strong>Form Results:</strong>
                 <div id="results"></div>
             </section>
+            <section>
+                <button onclick="return Client.apiCall()">Get Weather!</button>
+                <h1>Fetch Results:</h1>
+                <div id="fetch-results"></div>
+            </section>
         </main>
 
         <footer>
